# RoverMind

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
src/walk_talk_run_core/: package.xml  setup.cfg  setup.py
src/walk_talk_run_core/launch/: sequence_runner.launch.py
src/walk_talk_run_core/test/: test_sequence_model.py
src/walk_talk_run_core/walk_talk_run_core/: __init__.py  closed_loop.py  obstacle_avoider.py  sequence_model.py  sequence_runner.py
src/walk_talk_run_demo/: package.xml  setup.cfg  setup.py
src/walk_talk_run_demo/config/: default_sequence.json
src/walk_talk_run_demo/launch/: sequence_runner.launch.py
src/walk_talk_run_demo/resource/: walk_talk_run_demo
src/walk_talk_run_demo/test/: test_sequence_model.py
src/walk_talk_run_demo/walk_talk_run_demo/: __init__.py  sequence_model.py  sequence_runner.py
src/walk_talk_run_llm/: package.xml  setup.cfg  setup.py
src/walk_talk_run_llm/launch/: intent_parser.launch.py
src/walk_talk_run_llm/test/: test_intent_parser.py
src/walk_talk_run_llm/walk_talk_run_llm/: __init__.py  intent_parser.py
src/walk_talk_run_sim/: CMakeLists.txt  package.xml
src/walk_talk_run_sim/config/: default_sequence_sim.json
src/walk_talk_run_sim/launch/: sim.launch.py
src/walk_talk_run_sim/urdf/: diff_drive.urdf.xacro
src/walk_talk_run_sim/walk_talk_run_sim/: __init__.py
src/walk_talk_run_sim/world/: indoor.sdf
