<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walk_talk_run_llm</name>
  <version>0.2.0</version>
  <description>RoverMind — LLM-based natural language to motion sequence parser.</description>
  <maintainer email="cyhkbl@users.noreply.github.com">cyhkbl</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>anthropic</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>walk_talk_run_core</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
