<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walk_talk_run_sim</name>
  <version>0.2.0</version>
  <description>RoverMind — Gazebo simulation for differential-drive robot.</description>
  <maintainer email="cyhkbl@users.noreply.github.com">cyhkbl</maintainer>
  <license>Apache-2.0</license>

  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
